# voicetype

./: CMakeLists.txt
api/: org.kde.VoiceType.xml
applet/: CMakeLists.txt  metadata.json  voicetypecontrol.cpp  voicetypecontrol.hpp
applet/qml/: Toolbar.qml  main.qml
plasmoid/: Makefile
plasmoid/org.kde.plasma.voicetype/: metadata.json
plasmoid/org.kde.plasma.voicetype/contents/ui/: FullRepresentation.qml  main.qml
service/: CMakeLists.txt  README.md  main.cpp
service/dbus/: org.kde.VoiceType.xml
